# hype

./: .envrc  README.md  build.py  pyproject.toml
src/hype/: __init__.py
src/hype/ray/: __init__.py  applicative.hy
src/hype/types/: __init__.py  applicative.hy  functor.hy  monad.hy
src/strata/: __init__.py
src/strata/ray/: __init__.py  aparray.hy  applicative.hy  array.hy  functor.hy
src/strata/select/: __init__.py  intro_select.hy
