[tool.poetry]
name = "hype"
version = "0.1.0"
description = "A functional approach based on hy"
authors = ["Yogesh Sajanikar"]
license = "MIT"
readme = "README.md"
packages = [
  { include = "hype", from = "src" },
  { include = "strata", from = "src" },
]

[tool.poetry.build]
generate-setup-file = false
script = "build.py"

[tool.semantic_release]
  branch = "main"
  version_variable = "src/hype/__init__.py:__version__"

[tool.poetry.dependencies]
python = "^3.10, <3.13"
numpy = "^1.26.0"
hy = "^0.27.0"
hyrule = "^0.4.0"
ray = {extras = ["default"], version = "^2.7.0"}
dask = "^2023.9.2"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.2"
hypothesis = "^6.86.2"
black = "^23.9.1"
jedhy = "^1"
pyright = "^1.1.327"

[build-system]
requires = ["poetry-core", "hy", "hyrule"]
build-backend = "poetry.core.masonry.api"


